Use the URI class instead of the URL class.
The URL class can perform DNS resolutions at unexpected times, slowing down performance. The URI class is designed to be a more modern equivalent. URIs are converted to URLs when necessary.